--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=LJnoJ8"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=LJnoJ8" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=wQyniC"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=wQyniC" type="text/css">
 
   
   
@@ -38,7 +38,11 @@
 	<nav class="navbar navbar-dropdown navbar-expand-lg">
 		<div class="container">
 			<div class="navbar-brand">
-				
+				<span class="navbar-logo">
+					<a href="index.html#top">
+						<img src="assets/images/medlink-center-150.ico" alt="Mobirise Website Builder" style="height: 5rem;">
+					</a>
+				</span>
 				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="https://mobiri.se">MedLink</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,8 +186,7 @@
             <div class="col-12 content-head">
                 <div class="mbr-section-head mb-5">
                     <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                        <strong>Super Plans</strong>
-                    </h4>
+                        <strong>Planovi Licenciranja</strong></h4>
                     
                 </div>
             </div>
@@ -274,7 +277,7 @@
         <div class="row mb-5 justify-content-center">
             <div class="col-12 content-head">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                    <strong>MedLink Medical&nbsp;</strong></h3>
+                    <strong>MedLink Funkcionalnosti</strong></h3>
                 <p class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Revolicionizacija pacijentske nege uz sofisticiran softver.</p>
             </div>
         </div>
@@ -387,7 +390,7 @@
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
 								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_15" aria-expanded="false" aria-controls="collapse1">
-									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">Koliko su moji podaci sigurni?</h6>
+									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Koliko su moji podaci sigurni?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
@@ -402,7 +405,7 @@
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
 								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_15" aria-expanded="false" aria-controls="collapse2">
-									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">Da li mogu prilagoditi softver?</h6>
+									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Da li mogu prilagoditi softver?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
@@ -417,7 +420,7 @@
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
 								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_15" aria-expanded="false" aria-controls="collapse3">
-									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">Da li je korisnicima obezbeđena obuka?</h6>
+									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Da li je korisnicima obezbeđena obuka?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
@@ -430,7 +433,7 @@
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
 								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_15" aria-expanded="false" aria-controls="collapse4">
-									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">Šta ako se susretnem sa problemima?</h6>
+									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>Šta ako se susretnem sa problemima?</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
@@ -445,9 +448,9 @@
 						<div class="card">
 							<div class="card-header" role="tab" id="headingOne">
 								<a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_15" aria-expanded="false" aria-controls="collapse5">
-									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
+									<h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5"><em>
 										What areas do you deliver to?
-									</h6>
+									</em></h6>
 									<span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
 								</a>
 							</div>
@@ -485,7 +488,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fsg6b4bs5oh0G89aqOrEeZIw3wsOh4QJx9Bx0sbBQyTTJdl0mTO5UIprQiX8IjILqeyz7ku18VVZDQHoEeTspS+bSipUEymWy+/eXxiWOk8DGM7epbzDWOrA1Oi8HqXD">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RCylmYz8XCLyPuN8ztzEpn2n9t6zHhQ1NpjPy2NXyxEikKwrsRU6k8hotGEn3Gyn7NFKHVtcQ9FCW9UnQGzdiGtPkfh+LKW0poHiCUQs4kND+w6+MvZxssu1x6bbluLj">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Hvala na poslatoj poruci</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -536,7 +539,7 @@
 						<h4 class="card-title mbr-fonts-style mb-1 display-7">
 							<strong>Telefon</strong></h4>
 						<h5 class="card-text mbr-fonts-style display-7">
-							+381 (65) xxxx</h5>
+							+381 (65) 818 00 71</h5>
 					</div>
 				</div>
 			</div>
@@ -611,7 +614,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Building Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-cookiesAlertType='1' data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgb(255, 255, 255)' data-cookie-opacityOverlay='0' data-cookie-bgOpacity='100' data-cookie-textButton='U REDU' data-cookie-rejectText='REJECT' data-cookie-colorButton='#7787a5' data-cookie-rejectColor='#ffffff' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Koristimo kolačiće kako bismo vam pružili najbolje iskustvo. Pročitajte našu <a href='privacy.html'>politiku kolačića</a>.">
