--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=29vIJG"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=29vIJG" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iDaJQg"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iDaJQg" type="text/css">
 
   
   
@@ -73,10 +73,10 @@
   <div class="container-fluid">
     <div class="row">
       <div class="content-wrap col-12 col-md-12">
-        <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1"><strong>Digitalna Klinika</strong></h1>
+        <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1"><strong>Zdravo</strong></h1>
         
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Pridružite se Medlinku za divlju vožnju kroz budućnost medicinskog softvera - gde pacijenti preuzimaju kontrolu, istorije se odmotavaju i pregledi se zakazuju jednim potezom!</p>
-        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="index.html#contacts-1-uaChoEisf5">Započni</a></div>
+        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Upravljajte svojom klinikom na jednostavan način uz MedLink, inovativni softver za organizaciju pregleda pacijenata i brzo zakazivanje termina. Kroz MedLink, pacijenti preuzimaju kontrolu, a lekari imaju sve potrebne informacije na dohvat ruke, stvarajući tako efikasniji i udobniji proces zdravstvene nege.</p>
+        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="index.html#pricing-cards-1-uaChoEfnkO">Započni</a></div>
       </div>
     </div>
   </div>
@@ -484,7 +484,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sWh122WEvQOyTLbYCj26GVIAz8a7YmkgxYD/WKxvBtzl7g8DEVIioTCJn06OSH66lW26QnpHf5zp7MincmBlA8z4zpFHk8PSyCreeCsQgTWRkZEOn2u/rEIEtLQcnzoc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="U/0yzceezsNXDnFzC+J0zl1y1gXqyG4Tzpl6JHQKS4dcpv9wmoePfXA5RNlzB5KmViIHzgGSZeB0AqTwUlWP2yHpghgGlwD/0qZIiZZZ/eiQNiKsXFNDpKdyTJhs4W7c">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Hvala na poslatoj poruci</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -610,7 +610,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Building Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-cookiesAlertType='1' data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgb(255, 255, 255)' data-cookie-opacityOverlay='0' data-cookie-bgOpacity='100' data-cookie-textButton='U REDU' data-cookie-rejectText='REJECT' data-cookie-colorButton='#7787a5' data-cookie-rejectColor='#ffffff' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Koristimo kolačiće kako bismo vam pružili najbolje iskustvo. Pročitajte našu <a href='privacy.html'>politiku kolačića</a>.">
