--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=oNEQ5k"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=oNEQ5k" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=pXf0r6"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=pXf0r6" type="text/css">
 
   
   
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="navbar-brand">
 				
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-2" href="https://mobiri.se">MedLink</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-2" href="index.html">MedLink</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -52,7 +52,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="index.html#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
+						<a class="nav-link link text-black text-primary display-4" href="index.html"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="index.html#features-24-uaChoEg4XI" aria-expanded="false"><span class="mobi-mbri mobi-mbri-idea mbr-iconfont mbr-iconfont-btn"></span>Funkcionalnosti</a>
@@ -150,7 +150,7 @@
             <div class="col-12 content-head">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                     <strong>MedLink Funkcionalnosti</strong></h3>
-                <p class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Revolicionizacija pacijentske nege uz sofisticiran softver</p>
+                <p class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Revolucija pacijentske nege uz sofisticiran softver</p>
             </div>
         </div>
         <div class="row">
@@ -250,15 +250,21 @@
             <div class="col-12 content-head">
                 <div class="mbr-section-head mb-5">
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Zakažite Prezentaciju&nbsp;</strong></h3>
-                    <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Besplatna uvodna online prezentacija MedLink rešenja. Trajanje: 30 minuta</h4>
+                    <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Besplatna uvodna online prezentacija MedLink rešenja. Pedvidjeno: 60 minuta</h4>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r6zdL3/8ctYEYTRuMKpAyGC57BfcspT3ZmuuIfbCMtMGbP2R4KLv9AMuccMrGU5zzh0JRvSI0K/cbJRxYeEk9r4dXjEGPjK5WbxeyZonjehtQc7szVNSaM0reIjq+0MS">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yrGLhHJZBuFmlLzGHW3uwpGLOvV2ZWRZbIrILzs+nACVx2K9gg+/bOboG9iEPNDUeAuzk4An5CzOhqqZSmtieGAVshaNqynvzytoZzH7uk2BjXMAMUtP0Bp4B18gvzJq">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Hvala na poslatoj poruci</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Poštovani,
+
+Hvala na poslatoj poruci!
+Bićete kontaktirani u najkraćem mogućem roku. 
+
+Srdačno, 
+Medlink tim</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                             Oops...! some problem!
                         </div>
@@ -268,7 +274,7 @@
                             <input type="text" name="name" placeholder="Ime Klinike" data-form-field="name" class="form-control" value="" id="name-contact-form-3-uaChoEiIRl">
                         </div>
                         <div class="col-md col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="Validan E-mail" data-form-field="email" class="form-control" value="" id="email-contact-form-3-uaChoEiIRl">
+                            <input type="email" name="email" placeholder="E-mail adresa" data-form-field="email" class="form-control" value="" id="email-contact-form-3-uaChoEiIRl">
                         </div>
                         <div class="col-12 form-group mb-3 mb-3" data-for="url">
                             <input type="url" name="url" placeholder="Kontakt Telefon" data-form-field="url" class="form-control" value="" id="url-contact-form-3-uaChoEiIRl">
@@ -358,8 +364,7 @@
 							<div class="mbr-section-head">
 								<h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
 									<strong>Imate Pitanje?</strong></h4>
-								<h5 class="mbr-section-subtitle mbr-fonts-style align-center mt-4 mb-0 display-7">
-									Često postavljanja pitanja</h5>
+								<h5 class="mbr-section-subtitle mbr-fonts-style align-center mt-4 mb-0 display-7">Ovo su neka od često postavljanih</h5>
 							</div>
 						</div>
 					</div>
@@ -470,7 +475,7 @@
 				<div class="item-wrapper">
 					<span class="mbr-iconfont m-auto mobi-mbri-phone mobi-mbri" style="color: rgb(237, 239, 235); fill: rgb(237, 239, 235);"></span>
 					<div class="card-box">
-						<h4 class="card-title mbr-fonts-style mb-1 display-7"><strong>Call Centar:</strong></h4>
+						<h4 class="card-title mbr-fonts-style mb-1 display-7"><strong>Call Centar</strong></h4>
 						<h5 class="card-text mbr-fonts-style display-7">
 							+381 (65) 818 00 71</h5>
 					</div>
@@ -481,7 +486,7 @@
 					<span class="mbr-iconfont m-auto socicon-mail socicon" style="color: rgb(247, 247, 247); fill: rgb(247, 247, 247);"></span>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-7">
-							<strong>Email</strong></h4>
+							<strong>E-mail</strong></h4>
 						<h5 class="card-text mbr-fonts-style display-7">office@medlink.rs</h5>
 					</div>
 				</div>
@@ -546,7 +551,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2196761" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
